@@ -480,7 +480,7 @@ COMMAND(cmd_mapsql)
         for (i = 0; i < (numfields + 1) && i < 10; i++) {
           pe_regs_setenv(pe_regs, i, names[i]);
         }
-        queue_attribute_base(thing, s, executor, 0, pe_regs);
+        queue_attribute_base(thing, s, executor, 0, pe_regs, 0);
       }
 
       /* Queue the rest. */
@@ -491,7 +491,7 @@ COMMAND(cmd_mapsql)
         pe_regs_setenv(pe_regs, i, cells[i]);
       }
       pe_regs_qcopy(pe_regs, queue_entry->pe_info->regvals);
-      queue_attribute_base(thing, s, executor, 0, pe_regs);
+      queue_attribute_base(thing, s, executor, 0, pe_regs, 0);
     } else {
       /* What to do if there are no fields? This should be an error?. */
       /* notify_format(executor, T("Row %d: NULL"), rownum + 1); */
